Fix an issue in the user dropdown in the top right where the username is short ("View profile" wrapped into two lines)

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -619,7 +619,11 @@ footer {
         border: none;
         width: 100%;
     }
-    #user-info .dropdown-menu li > a:hover {
+    #user-info .dropdown-menu li > .profile-link {
+        white-space: nowrap;
+    }
+
+    #user-info .dropdown-menu li > .profile-link:hover {
         background-color: #E5f0CC;
     }
 
